# allbright

./: .dockerignore  .env.example  .env.production.template  .gitignore  .npmrc  AI-AGENT-DESKTOP-mission-APP  AI-AGENT-TAURI-DESKTOP.MD  AcidAudit.md  Allbright Desktop.lnk  Allbright-Desktop.lnk  Apex-ai-lead-architect.md  BLANK_SCREEN_DEBUG_REPORT.md  COMPREHENSIVE_DEPLOYMENT_READINESS_ANALYSIS.md  Cargo.toml  DASHBOARD-GUIDE.MD  DASHBOARD_AUDIT_REPORT.md  DASHBOARD_ENHANCEMENT_PROPOSAL.md  DASHBOARD_IMPLEMENTATION_PLAN.md  DASHBOARD_IMPROVEMENT_TODO.md  DASHBOARD_REBUILD_PROPOSAL.md  DASHBOARD_STARTUP_GUIDE.md  DEPLOYMENT-READINESS-REPORT-000.md  DEPLOYMENT-READINESS-REPORT-001.md  DEPLOYMENT-READINESS-REPORT-002.md  DEPLOYMENT-READINESS-REPORT.md  DEPLOYMENT_READINESS_ANALYSIS.md  DESKTOP_APP_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  DESKTOP_APP_PHASES.md  DESKTOP_IMPLEMENTATION_TODO.md  DESKTOP_STREAMLINED_IMPLEMENTATION.md  DISTRIBUTION_MANIFEST_v0.2.6.md  DISTRIBUTION_READY.md  Debugging.md  Dockerfile  ENHANCED-ADMIN-MODE.MD  External-auditor.md  FULL_IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_PLAN_DEPLOYMENT.md  IMPLEMENTATION_PLAN_TAURI.md  IMPLEMENTATION_PLAN_TAURI_WORKFLOW.md  (+123 more)
solver/: Cargo.toml  Dockerfile  config.toml
solver/benches/: path_cache.rs
solver/src/: benchmarks.rs  bss_16.rs  bss_36_auto_optimizer.rs  efficiency.rs  execution  handsoff.md  health.rs  lib.rs  main.rs  main.rs.backup  main.rs.bak  mod.rs  p2p  path_cache.rs  performance.rs  reinforcement_meta_learner.rs  risk.rs  risk_model.rs  rpc.rs  rpc_orchestrator.rs  safe_unwrap.rs  simulation  specialists.rs  startup_checks.rs
solver/tests/: sub_block_timing_test.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  (+1 more)
(+475 files in other folders)
