# Force rebuild v2
[package]
name = "allbright-solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "allbright_solver"

[[bin]]
name = "allbright"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Temporarily downgrade ethers for Windows compatibility
ethers = { version = "1.0", features = ["abigen", "rustls", "ws"] }
# winapi removed - Windows-only crate, fails on Linux/Render
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
petgraph = "0.6"
rayon = "1.7"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
dashmap = "5.5"
fastrand = "2.0"
# notify removed - desktop notifications not needed on headless server

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "path_cache"
harness = false

