[package]
name = "allbright"
version = "0.1.0"
description = "AllBright Arbitrage Flash Loan App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.11.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace]

